src/components/Checkout/atoms/Summary/Summary.module.css
@media screen and (min-width: 1px) {
    .cta__button {
        display: none;
        white-space: nowrap;
        align-items: center;
        justify-content: center;
        background-color: #18181B;
        padding: 10px 32px;
        width: 100%;
        border: none;
        cursor: pointer;
    }
    .cta__button_text {
        font-weight: 600;
        font-size: 14px;
        line-height: 140%;
        text-align: center;
        letter-spacing: 0.02em;
        color: #fff;
        margin-right: 12px;
    }
    .cta__financing {
        display: none;
    }
    .widget .cta__button {
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: #18181B;
        padding: 10px 32px;
        width: 100%;
        border: none;
        cursor: pointer;
    }
    .widget .cta__button_text {
        font-weight: 600;
        font-size: 14px;
        line-height: 140%;
        text-align: center;
        letter-spacing: 0.02em;
        color: #fff;
        margin-right: 12px;
        white-space: nowrap;
    }
    .widget .cta__financing {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-top: 13px;
    }
    .widget .cta__financing_link {
        font-weight: 300;
        font-size: 12px;
        line-height: 130%;
        color: #71717A;
        margin-left: 9px;
    }
    .widget .cta__financing_underlined {
        text-decoration: underline;
    }
    .container {
        padding: 35px 50px 40px 50px;
        background-color: #F4F4F5;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    .title {
        font-weight: 600;
        font-size: 16px;
        line-height: 140%;
        letter-spacing: 0.02em;
        color: #000;
        margin-bottom: 15px;
    }
    .grid__product_text {
        font-weight: 400;
        font-size: 14px;
        line-height: 130%;
    }
    .amount__title {
        font-weight: 600;
        font-size: 14px;
        line-height: 140%;
        letter-spacing: 0.02em;
        color: #000;
    }
    .amount__summary {
        font-weight: 700;
        font-size: 18px;
        line-height: 140%;
        letter-spacing: 0.02em;
        color: #000;
    }
    .grid__container_container {
        display: grid;
        align-items: center;
        justify-content: space-between;
        grid-template-columns: repeat(2,1fr);
        grid-gap: 15px;
        border-bottom: 1px solid #E4E4E7;
        padding-bottom: 20px;
    }
    .grid__product_container {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }
    .amount__container {
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin-top: 18px;
    }
    .grid__product_text.black {
        color: #000;
    }
    .grid__product_text.grey {
        color: #A1A1AA;
    }
}

@media screen and (min-width: 767px) {
    .title {
        font-weight: 700;
        font-size: 22px;
        margin-bottom: 30px;
    }
    .grid__product_text {
        font-size: 16px;
    }
    .grid__container_container {
        padding-bottom: 30px;
    }
    .amount__container {
        margin: 30px 0;
    }
    .amount__title {
        font-weight: 600;
        font-size: 16px;
    }
    .amount__summary {
        font-size: 22px;
    }
    .cta__button {
        display: flex;
    }
    .cta__financing {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-top: 30px;
    }
    .cta__financing_link {
        font-weight: 300;
        font-size: 16px;
        line-height: 130%;
        color: #71717A;
        margin-left: 9px;
    }
    .cta__financing_underlined {
        text-decoration: underline;
    }
}

@media screen and (min-width: 1281px) {
    .container {
        height: max-content;
        position: sticky;
        top: 50px;
    }
    .cta__financing {
        margin-top: 20px;
    }
    .cta__financing_icon.desktop {
        width: 29px;
        object-fit: contain;
    }
}

